--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.14",
     "@nextui-org/react": "^2.1.13",
+    "@prisma/client": "^5.8.0",
+    "dayjs": "^1.11.10",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.292.0",
     "next": "13.5.6",
+    "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.8",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.69.4",
@@ -27,6 +32,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
+    "prisma": "^5.8.0",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
